feat: implement lottery detail and create lottery functionality
