# app/lottery/model/prize_model_gen.go
@@ -1,0 +1,188 @@
+// Code generated by goctl. DO NOT EDIT!
+
+package model
+
+import (
+	"context"
+	"errors"
+	"fmt"
+	"time"
+
+	"github.com/SpectatorNan/gorm-zero/gormc"
+	"github.com/SpectatorNan/gorm-zero/gormc/batchx"
+	"github.com/zeromicro/go-zero/core/stores/cache"
+	"gorm.io/gorm"
+)
+
+var (
+	cacheGoLotteryLotteryPrizeIdPrefix = "cache:goLotteryLottery:prize:id:"
+)
+
+type (
+	prizeModel interface {
+		Insert(ctx context.Context, tx *gorm.DB, data *Prize) error
+		BatchInsert(ctx context.Context, tx *gorm.DB, news []Prize) error
+		FindOne(ctx context.Context, id int64) (*Prize, error)
+		Update(ctx context.Context, tx *gorm.DB, data *Prize) error
+		BatchUpdate(ctx context.Context, tx *gorm.DB, olds, news []Prize) error
+		BatchDelete(ctx context.Context, tx *gorm.DB, datas []Prize) error
+
+		Delete(ctx context.Context, tx *gorm.DB, id int64) error
+		// deprecated. recommend add a transaction in service context instead of using this
+		Transaction(ctx context.Context, fn func(db *gorm.DB) error) error
+	}
+
+	defaultPrizeModel struct {
+		gormc.CachedConn
+		table string
+	}
+
+	Prize struct {
+		Id         int64     `gorm:"column:id;primary_key"`
+		LotteryId  int64     `gorm:"column:lottery_id"` // 抽奖ID
+		Type       int64     `gorm:"column:type"`       // 奖品类型：1奖品 2优惠券 3兑换码 4商城 5微信红包封面 6红包
+		Name       string    `gorm:"column:name"`       // 奖品名称
+		Level      int64     `gorm:"column:level"`      // 几等奖 默认1
+		Thumb      string    `gorm:"column:thumb"`      // 奖品图
+		Count      int64     `gorm:"column:count"`      // 奖品份数
+		GrantType  int64     `gorm:"column:grant_type"` // 奖品发放方式：1快递邮寄 2让中奖者联系我 3中奖者填写信息 4跳转到其他小程序
+		CreateTime time.Time `gorm:"column:create_time"`
+		UpdateTime time.Time `gorm:"column:update_time"`
+	}
+)
+
+func (Prize) TableName() string {
+	return "`prize`"
+}
+
+func newPrizeModel(conn *gorm.DB, c cache.CacheConf) *defaultPrizeModel {
+	return &defaultPrizeModel{
+		CachedConn: gormc.NewConn(conn, c),
+		table:      "`prize`",
+	}
+}
+
+func (m *defaultPrizeModel) GetCacheKeys(data *Prize) []string {
+	if data == nil {
+		return []string{}
+	}
+	goLotteryLotteryPrizeIdKey := fmt.Sprintf("%s%v", cacheGoLotteryLotteryPrizeIdPrefix, data.Id)
+	cacheKeys := []string{
+		goLotteryLotteryPrizeIdKey,
+	}
+	cacheKeys = append(cacheKeys, m.customCacheKeys(data)...)
+	return cacheKeys
+}
+
+func (m *defaultPrizeModel) Insert(ctx context.Context, tx *gorm.DB, data *Prize) error {
+
+	err := m.ExecCtx(ctx, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Omit(prizeOmitColumns...).Save(&data).Error
+	}, m.GetCacheKeys(data)...)
+	return err
+}
+func (m *defaultPrizeModel) BatchInsert(ctx context.Context, tx *gorm.DB, news []Prize) error {
+
+	err := batchx.BatchExecCtx(ctx, m, news, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Create(&news).Error
+	})
+
+	return err
+}
+
+func (m *defaultPrizeModel) FindOne(ctx context.Context, id int64) (*Prize, error) {
+	goLotteryLotteryPrizeIdKey := fmt.Sprintf("%s%v", cacheGoLotteryLotteryPrizeIdPrefix, id)
+	var resp Prize
+	err := m.QueryCtx(ctx, &resp, goLotteryLotteryPrizeIdKey, func(conn *gorm.DB, v interface{}) error {
+		return conn.Model(&Prize{}).Where("`id` = ?", id).First(&resp).Error
+	})
+	switch err {
+	case nil:
+		return &resp, nil
+	case gormc.ErrNotFound:
+		return nil, ErrNotFound
+	default:
+		return nil, err
+	}
+}
+
+func (m *defaultPrizeModel) Update(ctx context.Context, tx *gorm.DB, data *Prize) error {
+	old, err := m.FindOne(ctx, data.Id)
+	if err != nil && errors.Is(err, ErrNotFound) {
+		return err
+	}
+	clearKeys := append(m.GetCacheKeys(old), m.GetCacheKeys(data)...)
+	err = m.ExecCtx(ctx, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Omit(prizeOmitColumns...).Save(data).Error
+	}, clearKeys...)
+	return err
+}
+func (m *defaultPrizeModel) BatchUpdate(ctx context.Context, tx *gorm.DB, olds, news []Prize) error {
+	clearData := make([]Prize, 0, len(olds)+len(news))
+	clearData = append(clearData, olds...)
+	clearData = append(clearData, news...)
+	err := batchx.BatchExecCtx(ctx, m, clearData, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Save(&news).Error
+	})
+
+	return err
+}
+
+func (m *defaultPrizeModel) Delete(ctx context.Context, tx *gorm.DB, id int64) error {
+	data, err := m.FindOne(ctx, id)
+	if err != nil {
+		if errors.Is(err, ErrNotFound) {
+			return nil
+		}
+		return err
+	}
+	err = m.ExecCtx(ctx, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Delete(&Prize{}, id).Error
+	}, m.GetCacheKeys(data)...)
+	return err
+}
+
+func (m *defaultPrizeModel) BatchDelete(ctx context.Context, tx *gorm.DB, datas []Prize) error {
+	err := batchx.BatchExecCtx(ctx, m, datas, func(conn *gorm.DB) error {
+		db := conn
+		if tx != nil {
+			db = tx
+		}
+		return db.Delete(&datas).Error
+	})
+
+	return err
+}
+
+// deprecated. recommend add a transaction in service context instead of using this
+func (m *defaultPrizeModel) Transaction(ctx context.Context, fn func(db *gorm.DB) error) error {
+	return m.TransactCtx(ctx, fn)
+}
+
+func (m *defaultPrizeModel) formatPrimary(primary interface{}) string {
+	return fmt.Sprintf("%s%v", cacheGoLotteryLotteryPrizeIdPrefix, primary)
+}
+
+func (m *defaultPrizeModel) queryPrimary(conn *gorm.DB, v, primary interface{}) error {
+	return conn.Model(&Prize{}).Where("`id` = ?", primary).Take(v).Error
+}
